jwt validations updated.